# oc_cours

./: README.md  main.c
Activite1/: main.c  main.h
Activite2/: CMakeLists.txt  main.c  main.h
Activite3bis/: CMakeLists.txt  main.c
TP2/: CMakeLists.txt  dictionnaire.txt  main.c  main.h
activite1/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  main.c  main.h
